--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "jest": "^29.2.2",
+    "postcss": "^8.4.19",
     "tailwindcss": "^3.2.2",
     "vite": "^3.2.2"
   }
