Finished mobile and laptop stylings and adjusted the logic for player turns by adding state in App_State_Context.tsx
Removed use effect in Game_Container for turn determination

used context to pass state of turns directly to buttons and player Columns

adjusted styling to look less janky on resizing

styling was completed for mobile sizes in portrait orientation and laptop screen sizes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,27 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
+    "useDefineForClassFields": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "noEmitOnError": true,
+    "removeComments": true,
     "rootDir": "./src",
     "outDir": "./Dist",
-    "removeComments": true,
     "sourceMap": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
