--- a/package.json
+++ b/package.json
@@ -2,17 +2,10 @@
   "name": "pig-game",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,10 +35,18 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.2.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.13",
     "jest": "^29.2.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.2",
+    "typescript": "^4.8.4",
     "vite": "^3.2.2"
   }
 }
