--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+      "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "test": "jest",
     "eject": "react-scripts eject"
@@ -34,19 +35,22 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.2.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "jest": "^29.2.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.2",
     "typescript": "^4.8.4",
     "vite": "^3.2.2"
-  }
+  },
+
+  "homepage": "https://sophosAnthropos.github.io/sophosPigGame/"
 }
