updated tsconfig and git ignore to see if it helps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "sourceMap": true,
     "noImplicitAny": true
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": ["node_modules"]
 }
