--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-      "deploy": "gh-pages -d dist",
+      "deploy": "gh-pages --dist dist --branch 'release'",
     "preview": "vite preview",
     "test": "jest",
     "eject": "react-scripts eject"
