fixed file paths in html. they needed a period

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+      "predeploy": "npm run build",
       "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "test": "jest",
